spacing of input field fixed

--- a/styles/Pages/chat.css
+++ b/styles/Pages/chat.css
@@ -14,6 +14,28 @@
   border-radius: 10px;
   margin-bottom: 100px;
 }
+
+::-webkit-scrollbar {
+  border-radius: 5px;
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .chat-banner {
   background: white;
   padding: 15px;
@@ -46,6 +68,7 @@
   flex-direction: column;
 }
 #chat-box {
+  min-height: 500px;
   margin-left: 10px;
 }
 .chat-input button {
