--- a/styles/Pages/get-started-page.css
+++ b/styles/Pages/get-started-page.css
@@ -5,7 +5,7 @@
   max-width: 600px;
   text-align: center;
   padding: 5vh 2vw;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   display: grid;
   justify-content: center;
   align-items: center;
@@ -36,13 +36,16 @@
   font-family: sans-serif;
   font-weight: lighter;
   font-size: 3.5rem;
+  margin-bottom: 0;
 }
 
 .general-text {
   font-family: sans-serif;
   font-size: 1.5rem;
 }
-
+#feedback-isUnique {
+  margin: 0;
+}
 .submit-button {
   background-color: #718eff;
   border-radius: 25px;
@@ -56,7 +59,7 @@
   cursor: pointer;
   color: white;
   letter-spacing: 3px;
-  margin-bottom: 10%;
+  margin-bottom: 0;
 }
 body {
   overflow: hidden;
